kipper/core/src/compiler/parser/KipperParser.ts
// Generated from ./Kipper.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { KipperListener } from "./KipperListener";
import { KipperVisitor } from "./KipperVisitor";

export class KipperParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly Const = 6;
	public static readonly Var = 7;
	public static readonly As = 8;
	public static readonly Switch = 9;
	public static readonly Case = 10;
	public static readonly Default = 11;
	public static readonly Break = 12;
	public static readonly Continue = 13;
	public static readonly Do = 14;
	public static readonly While = 15;
	public static readonly If = 16;
	public static readonly Else = 17;
	public static readonly For = 18;
	public static readonly Enum = 19;
	public static readonly DefFunc = 20;
	public static readonly Return = 21;
	public static readonly CallFunc = 22;
	public static readonly Struct = 23;
	public static readonly Typeof = 24;
	public static readonly LeftParen = 25;
	public static readonly RightParen = 26;
	public static readonly LeftBracket = 27;
	public static readonly RightBracket = 28;
	public static readonly LeftBrace = 29;
	public static readonly RightBrace = 30;
	public static readonly Plus = 31;
	public static readonly PlusPlus = 32;
	public static readonly Minus = 33;
	public static readonly MinusMinus = 34;
	public static readonly Star = 35;
	public static readonly Div = 36;
	public static readonly Mod = 37;
	public static readonly PowerTo = 38;
	public static readonly AndAnd = 39;
	public static readonly OrOr = 40;
	public static readonly Not = 41;
	public static readonly Comma = 42;
	public static readonly Assign = 43;
	public static readonly StarAssign = 44;
	public static readonly DivAssign = 45;
	public static readonly ModAssign = 46;
	public static readonly PlusAssign = 47;
	public static readonly MinusAssign = 48;
	public static readonly Equal = 49;
	public static readonly NotEqual = 50;
	public static readonly Less = 51;
	public static readonly LessEqual = 52;
	public static readonly Greater = 53;
	public static readonly GreaterEqual = 54;
	public static readonly Dot = 55;
	public static readonly Identifier = 56;
	public static readonly IntegerConstant = 57;
	public static readonly FloatingConstant = 58;
	public static readonly DigitSequence = 59;
	public static readonly CharacterConstant = 60;
	public static readonly FStringLiteral = 61;
	public static readonly StringLiteral = 62;
	public static readonly WS = 63;
	public static readonly Whitespace = 64;
	public static readonly BlockComment = 65;
	public static readonly Newline = 66;
	public static readonly RULE_compilationUnit = 0;
	public static readonly RULE_translationUnit = 1;
	public static readonly RULE_externalItem = 2;
	public static readonly RULE_functionDeclaration = 3;
	public static readonly RULE_endOfLine = 4;
	public static readonly RULE_primaryExpression = 5;
	public static readonly RULE_listConstant = 6;
	public static readonly RULE_postfixExpression = 7;
	public static readonly RULE_arraySpecifier = 8;
	public static readonly RULE_argumentExpressionList = 9;
	public static readonly RULE_unaryExpression = 10;
	public static readonly RULE_incrementOrDecrementOperator = 11;
	public static readonly RULE_unaryOperator = 12;
	public static readonly RULE_castOrConvertExpression = 13;
	public static readonly RULE_multiplicativeExpression = 14;
	public static readonly RULE_additiveExpression = 15;
	public static readonly RULE_relationalExpression = 16;
	public static readonly RULE_equalityExpression = 17;
	public static readonly RULE_logicalAndExpression = 18;
	public static readonly RULE_logicalOrExpression = 19;
	public static readonly RULE_conditionalExpression = 20;
	public static readonly RULE_assignmentExpression = 21;
	public static readonly RULE_assignmentOperator = 22;
	public static readonly RULE_expression = 23;
	public static readonly RULE_constantExpression = 24;
	public static readonly RULE_declaration = 25;
	public static readonly RULE_storageTypeSpecifier = 26;
	public static readonly RULE_declarationSpecifiers = 27;
	public static readonly RULE_declarationSpecifier = 28;
	public static readonly RULE_initDeclarator = 29;
	public static readonly RULE_typeSpecifier = 30;
	public static readonly RULE_declarator = 31;
	public static readonly RULE_directDeclarator = 32;
	public static readonly RULE_nestedParenthesesBlock = 33;
	public static readonly RULE_parameterTypeList = 34;
	public static readonly RULE_parameterList = 35;
	public static readonly RULE_parameterDeclaration = 36;
	public static readonly RULE_initializer = 37;
	public static readonly RULE_statement = 38;
	public static readonly RULE_compoundStatement = 39;
	public static readonly RULE_blockItemList = 40;
	public static readonly RULE_blockItem = 41;
	public static readonly RULE_expressionStatement = 42;
	public static readonly RULE_selectionStatement = 43;
	public static readonly RULE_switchLabeledStatement = 44;
	public static readonly RULE_iterationStatement = 45;
	public static readonly RULE_forCondition = 46;
	public static readonly RULE_forDeclaration = 47;
	public static readonly RULE_forExpression = 48;
	public static readonly RULE_jumpStatement = 49;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compilationUnit",
		"translationUnit",
		"externalItem",
		"functionDeclaration",
		"endOfLine",
		"primaryExpression",
		"listConstant",
		"postfixExpression",
		"arraySpecifier",
		"argumentExpressionList",
		"unaryExpression",
		"incrementOrDecrementOperator",
		"unaryOperator",
		"castOrConvertExpression",
		"multiplicativeExpression",
		"additiveExpression",
		"relationalExpression",
		"equalityExpression",
		"logicalAndExpression",
		"logicalOrExpression",
		"conditionalExpression",
		"assignmentExpression",
		"assignmentOperator",
		"expression",
		"constantExpression",
		"declaration",
		"storageTypeSpecifier",
		"declarationSpecifiers",
		"declarationSpecifier",
		"initDeclarator",
		"typeSpecifier",
		"declarator",
		"directDeclarator",
		"nestedParenthesesBlock",
		"parameterTypeList",
		"parameterList",
		"parameterDeclaration",
		"initializer",
		"statement",
		"compoundStatement",
		"blockItemList",
		"blockItem",
		"expressionStatement",
		"selectionStatement",
		"switchLabeledStatement",
		"iterationStatement",
		"forCondition",
		"forDeclaration",
		"forExpression",
		"jumpStatement",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined,
		"'->'",
		"';'",
		"'?'",
		"':'",
		"'...'",
		"'const'",
		"'var'",
		"'as'",
		"'switch'",
		"'case'",
		"'default'",
		"'break'",
		"'continue'",
		"'do'",
		"'while'",
		"'if'",
		"'else'",
		"'for'",
		"'enum'",
		"'def'",
		"'return'",
		"'call'",
		"'struct'",
		"'typeof'",
		"'('",
		"')'",
		"'['",
		"']'",
		"'{'",
		"'}'",
		"'+'",
		"'++'",
		"'-'",
		"'--'",
		"'*'",
		"'/'",
		"'%'",
		"'**'",
		"'&&'",
		"'||'",
		"'!'",
		"','",
		"'='",
		"'*='",
		"'/='",
		"'%='",
		"'+='",
		"'-='",
		"'=='",
		"'!='",
		"'<'",
		"'<='",
		"'>'",
		"'>='",
		"'.'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined,
		undefined,
		undefined,
		undefined,
		undefined,
		undefined,
		"Const",
		"Var",
		"As",
		"Switch",
		"Case",
		"Default",
		"Break",
		"Continue",
		"Do",
		"While",
		"If",
		"Else",
		"For",
		"Enum",
		"DefFunc",
		"Return",
		"CallFunc",
		"Struct",
		"Typeof",
		"LeftParen",
		"RightParen",
		"LeftBracket",
		"RightBracket",
		"LeftBrace",
		"RightBrace",
		"Plus",
		"PlusPlus",
		"Minus",
		"MinusMinus",
		"Star",
		"Div",
		"Mod",
		"PowerTo",
		"AndAnd",
		"OrOr",
		"Not",
		"Comma",
		"Assign",
		"StarAssign",
		"DivAssign",
		"ModAssign",
		"PlusAssign",
		"MinusAssign",
		"Equal",
		"NotEqual",
		"Less",
		"LessEqual",
		"Greater",
		"GreaterEqual",
		"Dot",
		"Identifier",
		"IntegerConstant",
		"FloatingConstant",
		"DigitSequence",
		"CharacterConstant",
		"FStringLiteral",
		"StringLiteral",
		"WS",
		"Whitespace",
		"BlockComment",
		"Newline",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
		KipperParser._LITERAL_NAMES,
		KipperParser._SYMBOLIC_NAMES,
		[],
	);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return KipperParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string {
		return "Kipper.g4";
	}

	// @Override
	public get ruleNames(): string[] {
		return KipperParser.ruleNames;
	}

	// @Override
	public get serializedATN(): string {
		return KipperParser._serializedATN;
	}

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(KipperParser._ATN, this);
	}
	// @RuleVersion(0)
	public compilationUnit(): CompilationUnitContext {
		let _localctx: CompilationUnitContext = new CompilationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, KipperParser.RULE_compilationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (
					(((_la - 2) & ~0x1f) === 0 &&
						((1 << (_la - 2)) &
							((1 << (KipperParser.T__1 - 2)) |
								(1 << (KipperParser.Const - 2)) |
								(1 << (KipperParser.Var - 2)) |
								(1 << (KipperParser.Switch - 2)) |
								(1 << (KipperParser.Break - 2)) |
								(1 << (KipperParser.Continue - 2)) |
								(1 << (KipperParser.Do - 2)) |
								(1 << (KipperParser.While - 2)) |
								(1 << (KipperParser.If - 2)) |
								(1 << (KipperParser.For - 2)) |
								(1 << (KipperParser.DefFunc - 2)) |
								(1 << (KipperParser.Return - 2)) |
								(1 << (KipperParser.CallFunc - 2)) |
								(1 << (KipperParser.LeftParen - 2)) |
								(1 << (KipperParser.LeftBracket - 2)) |
								(1 << (KipperParser.LeftBrace - 2)) |
								(1 << (KipperParser.Plus - 2)) |
								(1 << (KipperParser.PlusPlus - 2)) |
								(1 << (KipperParser.Minus - 2)))) !==
							0) ||
					(((_la - 34) & ~0x1f) === 0 &&
						((1 << (_la - 34)) &
							((1 << (KipperParser.MinusMinus - 34)) |
								(1 << (KipperParser.Not - 34)) |
								(1 << (KipperParser.Identifier - 34)) |
								(1 << (KipperParser.IntegerConstant - 34)) |
								(1 << (KipperParser.FloatingConstant - 34)) |
								(1 << (KipperParser.CharacterConstant - 34)) |
								(1 << (KipperParser.FStringLiteral - 34)) |
								(1 << (KipperParser.StringLiteral - 34)) |
								(1 << (KipperParser.WS - 34)) |
								(1 << (KipperParser.Whitespace - 34)))) !==
							0)
				) {
					{
						this.state = 100;
						this.translationUnit();
					}
				}

				this.state = 103;
				this.match(KipperParser.EOF);
			}
		} catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public translationUnit(): TranslationUnitContext {
		let _localctx: TranslationUnitContext = new TranslationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, KipperParser.RULE_translationUnit);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
						this.state = 112;
						this._errHandler.sync(this);
						switch (this.interpreter.adaptivePredict(this._input, 2, this._ctx)) {
							case 1:
								{
									this.state = 105;
									this.externalItem();
								}
								break;

							case 2:
								{
									this.state = 106;
									this.endOfLine();
								}
								break;

							case 3:
								{
									this.state = 108;
									this._errHandler.sync(this);
									_alt = 1;
									do {
										switch (_alt) {
											case 1:
												{
													{
														this.state = 107;
														this.match(KipperParser.WS);
													}
												}
												break;
											default:
												throw new NoViableAltException(this);
										}
										this.state = 110;
										this._errHandler.sync(this);
										_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
									} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
								}
								break;
						}
					}
					this.state = 114;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (
					(((_la - 2) & ~0x1f) === 0 &&
						((1 << (_la - 2)) &
							((1 << (KipperParser.T__1 - 2)) |
								(1 << (KipperParser.Const - 2)) |
								(1 << (KipperParser.Var - 2)) |
								(1 << (KipperParser.Switch - 2)) |
								(1 << (KipperParser.Break - 2)) |
								(1 << (KipperParser.Continue - 2)) |
								(1 << (KipperParser.Do - 2)) |
								(1 << (KipperParser.While - 2)) |
								(1 << (KipperParser.If - 2)) |
								(1 << (KipperParser.For - 2)) |
								(1 << (KipperParser.DefFunc - 2)) |
								(1 << (KipperParser.Return - 2)) |
								(1 << (KipperParser.CallFunc - 2)) |
								(1 << (KipperParser.LeftParen - 2)) |
								(1 << (KipperParser.LeftBracket - 2)) |
								(1 << (KipperParser.LeftBrace - 2)) |
								(1 << (KipperParser.Plus - 2)) |
								(1 << (KipperParser.PlusPlus - 2)) |
								(1 << (KipperParser.Minus - 2)))) !==
							0) ||
					(((_la - 34) & ~0x1f) === 0 &&
						((1 << (_la - 34)) &
							((1 << (KipperParser.MinusMinus - 34)) |
								(1 << (KipperParser.Not - 34)) |
								(1 << (KipperParser.Identifier - 34)) |
								(1 << (KipperParser.IntegerConstant - 34)) |
								(1 << (KipperParser.FloatingConstant - 34)) |
								(1 << (KipperParser.CharacterConstant - 34)) |
								(1 << (KipperParser.FStringLiteral - 34)) |
								(1 << (KipperParser.StringLiteral - 34)) |
								(1 << (KipperParser.WS - 34)) |
								(1 << (KipperParser.Whitespace - 34)))) !==
							0)
				);
			}
		} catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public externalItem(): ExternalItemContext {
		let _localctx: ExternalItemContext = new ExternalItemContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, KipperParser.RULE_externalItem);
		try {
			this.state = 118;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
				case KipperParser.DefFunc:
					_localctx = new ExternalFunctionDeclarationContext(_localctx);
					this.enterOuterAlt(_localctx, 1);
					{
						this.state = 116;
						this.functionDeclaration();
					}
					break;
				case KipperParser.T__1:
				case KipperParser.Const:
				case KipperParser.Var:
				case KipperParser.Switch:
				case KipperParser.Break:
				case KipperParser.Continue:
				case KipperParser.Do:
				case KipperParser.While:
				case KipperParser.If:
				case KipperParser.For:
				case KipperParser.Return:
				case KipperParser.CallFunc:
				case KipperParser.LeftParen:
				case KipperParser.LeftBracket:
				case KipperParser.LeftBrace:
				case KipperParser.Plus:
				case KipperParser.PlusPlus:
				case KipperParser.Minus:
				case KipperParser.MinusMinus:
				case KipperParser.Not:
				case KipperParser.Identifier:
				case KipperParser.IntegerConstant:
				case KipperParser.FloatingConstant:
				case KipperParser.CharacterConstant:
				case KipperParser.FStringLiteral:
				case KipperParser.StringLiteral:
				case KipperParser.WS:
				case KipperParser.Whitespace:
					_localctx = new ExternalBlockItemContext(_localctx);
					this.enterOuterAlt(_localctx, 2);
					{
						this.state = 117;
						this.blockItem();
					}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		} finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let _localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, KipperParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
				this.state = 120;
				this.match(KipperParser.DefFunc);
				this.state = 124;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === KipperParser.WS) {
					{
						{
							this.state = 121;
							this.match(KipperParser.WS);
						}
					}
					this.state = 126;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 127;
				this.declarator();
				this.state = 131;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === KipperParser.WS) {
					{
						{
							this.state = 128;
							this.match(KipperParser.WS);
						}
					}
					this.state = 133;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 134;
				this.match(KipperParser.LeftParen);
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === KipperParser.Identifier) {
					{
						this.state = 135;
						this.parameterTypeList();
					}
				}
